--- a/contact.html
+++ b/contact.html
@@ -1,84 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Benelux Kabels - Kabelwerken</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="" />
-
-	<link rel="shortcut icon" type="image/png" href="images/logo_wYT_icon.ico"/>
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700" rel="stylesheet">
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="css/flexslider.css">
-
-	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	
-	<!-- Flaticons  -->
-	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
-	</head>
-	<body>
-		
-	<div class="colorlib-loader"></div>
-
-	<div id="page">
-		<nav class="colorlib-nav" role="navigation">
-			<div class="top-menu">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-2">
-							<div id="colorlib-logo"><a href="index.html">Benelux Kabels</a></div>
-						</div>
-						<div class="col-xs-10 text-right menu-1">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="projecten.html">Projecten</a></li>
-								<li><a href="veiligheid.html">Veiligheid</a></li>
-								<li class="active"><a href="contact.html">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</nav>
+{% extends "base.html" %}
+{% block content %}
 		<aside id="colorlib-hero">
 			<div class="flexslider">
 				<ul class="slides">
@@ -123,66 +44,4 @@
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.1923572992036!2d4.036099915753883!3d51.0679990795653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c39a7fd5789b83%3A0x6e2b5bd71f1c6cad!2sZwaanstraat%203a%2C%209240%20Zele!5e0!3m2!1sen!2sbe!4v1606659304125!5m2!1sen!2sbe" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 			</div>
 		</div>
-
-		<footer id="colorlib-footer" role="contentinfo">
-			<div class="container">
-				<div class="row row-pb-md">
-					<div class="col-md-3 colorlib-widget">
-						<h4>Over ons</h4>
-						<p>Wij zijn een familiebedrijf dat zich specialiseerd in algemene kabelwerken, elk project kan bij ons terecht! Gelegen te Zele, is dit een familiebedrijf met uw werk als onze passie. </p>
-						<p>
-							<ul class="colorlib-footer-links">
-								<li><a>BTW BE0719 715 947</a></li>
-							</ul>
-						</p>
-					</div>
-					<div class="col-md-4 col-md-push-1">
-						<h4>Contact Info</h4>
-						<ul class="colorlib-footer-links">
-								<li>Zwaanstraat 3A <br> 9240 Zele</li>
-								<li><a href="tel://+32484445725"><i class="icon-phone"></i> + 32 484 44 57 25</a></li>
-								<li><a href="mailto:info@benelux-kabels.com"><i class="icon-envelope"></i> info@benelux-kabels.com</a></li>
-								<li><a href="http://benelux-kabels.be"><i class="icon-location4"></i> benelux-kabels.be</a></li>
-						</ul>
-					</div>
-					<div class="col-md-3 col-md-push-1">
-						<img src="images/logo.png" alt="logo" height="300" width="400">
-					</div>
-				</div>
-			</div>
-		</footer>
-	</div>
-
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
-	</div>
-	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	<!-- Owl carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<!-- Counters -->
-	<script src="js/jquery.countTo.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
-
-	<!-- Main -->
-	<script src="js/main.js"></script>
-
-	</body>
-</html>
-
+{% endblock %}
