--- a/projecten.html
+++ b/projecten.html
@@ -88,6 +88,12 @@
 				</div>
 				<div class="row">
 				  <div class="col-md-4 col-md-offset-1" id="resimler" style="width: auto">
+							{% for project in projects_gallery %}
+								{% for key, value in project.items() %}
+							<a data-fancybox="gallery" href="images/galerij/{{ key }}.jpeg" data-caption="{{ value }}"><img src="images/galerij/resized/{{ key }}.jpg"></a>
+								{% endfor %}
+							<div class="amk"></div>
+							{% endfor %}
 							<a data-fancybox="gallery" href="images/galerij/1.jpeg" data-caption="Trekken van zware vermogen-kabels op kabelbaan in Tessenderlo."><img src="images/galerij/resized/1.jpg"></a>
 							<a data-fancybox="gallery" href="images/galerij/2.jpeg" data-caption="Trekken van zware vermogen-kabels op kabelbaan in Dendermonde."><img src="images/galerij/resized/2.jpg"></a>
 							<a data-fancybox="gallery" href="images/galerij/3.jpeg" data-caption="Trekken en vastleggen van zware vermogen-kabels, aarding in sleuf en kabelbaan in Tessenderlo."><img src="images/galerij/resized/3.jpg"></a>
