--- a/old/base.html
+++ b/old/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Benelux Kabels - Kabelwerken</title>
@@ -9,21 +10,21 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-	<link rel="shortcut icon" type="image/png" href="images/logo_wYT_icon.ico"/>
+	<link rel="shortcut icon" type="image/png" href="images/logo_wYT_icon.ico" />
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -40,7 +41,7 @@
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	
+
 	<!-- Flaticons  -->
 	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
@@ -54,75 +55,82 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		
+</head>
+
+<body>
+
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
-			<nav class="colorlib-nav" role="navigation">
-					<div class="top-menu">
-						<div class="container">
-							<div class="row">
-								<div class="col-xs-2">
-									<div id="colorlib-logo"><a href="index.html">Benelux Kabels</a></div>
-								</div>
-								<div class="col-xs-10 text-right menu-1">
-									<ul>
-                                        <!-- <li class="active"> -->
-										<li><a href="index.html">Home</a></li>
-                                        <li><a href="projecten.html">Projecten</a></li>
-                                        <li><a href="veiligheid.html">Veiligheid</a></li>
-										<li><a href="contact.html">Contact</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</nav>
-		
-        {% block content %}
-        {% endblock %}
-		
-		<footer id="colorlib-footer" role="contentinfo">
+		<nav class="colorlib-nav" role="navigation">
+			<div class="top-menu">
 				<div class="container">
-					<div class="row row-pb-md">
-						<div class="col-md-3 colorlib-widget">
-							<h4>Over ons</h4>
-							<p>Wij zijn een familiebedrijf dat zich specialiseerd in algemene kabelwerken, elk project kan bij ons terecht! Gelegen te Zele, is dit een familiebedrijf met uw werk als onze passie. </p>
-							<p>
-								<ul class="colorlib-footer-links">
-									<li><a>BTW BE0719 715 947</a></li>
-								</ul>
-							</p>
+					<div class="row">
+						<div class="col-xs-2">
+							<div id="colorlib-logo"><a href="index.html">Benelux Kabels</a></div>
 						</div>
-						<div class="col-md-4 col-md-push-1">
-							<h4>Contact Info</h4>
-							<ul class="colorlib-footer-links">
-								<li>Zwaanstraat 3A <br> 9240 Zele</li>
-								<li><a href="tel://+32484445725"><i class="icon-phone"></i> + 32 484 44 57 25</a></li>
-								<li><a href="mailto:info@benelux-kabels.com"><i class="icon-envelope"></i> info@benelux-kabels.com</a></li>
-								<li><a href="http://benelux-kabels.be"><i class="icon-location4"></i> benelux-kabels.be</a></li>
+						<div class="col-xs-10 text-right menu-1">
+							<ul>
+								<!-- <li class="active"> -->
+								<li><a href="index.html">Home</a></li>
+								<li><a href="projecten.html">Projecten</a></li>
+								<li><a href="veiligheid.html">Veiligheid</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
-						</div>
-						<div class="col-md-3 col-md-push-1">
-							<img src="images/logo.png" alt="logo" height="300" width="400">
 						</div>
 					</div>
 				</div>
-			</footer>
+			</div>
+		</nav>
+
+		{% block content %}
+		{% endblock %}
+
+		<footer id="colorlib-footer" role="contentinfo">
+			<div class="container">
+				<div class="row row-pb-md">
+					<div class="col-md-3 colorlib-widget">
+						<h4>Over ons</h4>
+						<p>Wij zijn een familiebedrijf dat zich specialiseerd in algemene kabelwerken, elk project kan
+							bij ons terecht! Gelegen te Zele, is dit een familiebedrijf met uw werk als onze passie.
+						</p>
+						<p>
+						<ul class="colorlib-footer-links">
+							<li><a>BTW BE0719 715 947</a></li>
+						</ul>
+						</p>
+					</div>
+					<div class="col-md-4 col-md-push-1">
+						<h4>Contact Info</h4>
+						<ul class="colorlib-footer-links">
+							<li>Zwaanstraat 3A <br> 9240 Zele</li>
+							<li><a href="tel://+32484445725"><i class="icon-phone"></i> + 32 484 44 57 25</a></li>
+							<li><a href="mailto:info@benelux-kabels.com"><i class="icon-envelope"></i>
+									info@benelux-kabels.com</a></li>
+							<li><a href="http://benelux-kabels.be"><i class="icon-location4"></i> benelux-kabels.be</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md-3 col-md-push-1">
+						<img src="images/logo.png" alt="logo" height="300" width="400">
+					</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+		crossorigin="anonymous"></script>
 	<!-- Waypoints -->
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Stellar Parallax -->
@@ -139,6 +147,6 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
