--- a/old/index.html
+++ b/old/index.html
@@ -1,88 +1,96 @@
 {% extends "base.html" %}
 {% block content %}
-		<aside id="colorlib-hero">
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url(images/index_benelux_kabels_1.png);">
-			   		<div class="overlay"></div>
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
-				   				<div class="slider-text-inner text-center">
-									   <h2>Kwaliteit aan een competetieve prijs is waar we voor staan!</h2>
-									   <h1>Kabelwerken</h1>
-				   				</div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			   	<li style="background-image: url(images/index_benelux_kabels_2.png);">
-			   		<div class="overlay"></div>
-			   		<div class="container-fluids">
-			   			<div class="row">
-				   			<div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
-				   				<div class="slider-text-inner text-center">
-				   					<h2>Wij hebben voor elk probleem een oplossing!</h2>
-				   					<h1>Diverse werken</h1>
-				   				</div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			   		
-			  	</ul>
-		  	</div>
-		</aside>
-
-		<div id="colorlib-intro">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 col-md-push-4 animate-box colorlib-heading animate-box">
-						<span class="sm">Welkom!</span>
-						<h2><span class="thin">Ons geheim voor</span> <span class="thick">succes</span></h2>
-					</div>
-					<div class="col-md-4 col-md-pull-4 animate-box">
-						<div class="box text-center">
-							<span class="yr">KENNIS</span>
+<aside id="colorlib-hero">
+	<div class="flexslider">
+		<ul class="slides">
+			<li style="background-image: url(images/index_benelux_kabels_1.png);">
+				<div class="overlay"></div>
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
+							<div class="slider-text-inner text-center">
+								<h2>Kwaliteit aan een competetieve prijs is waar we voor staan!</h2>
+								<h1>Kabelwerken</h1>
+							</div>
 						</div>
 					</div>
-					<div class="col-md-4 animate-box">
-						<p>BENELUX-KABELS is een heuze familieonderneming. Wij leveren kwalitatief kabelwerken voor elk project van groot tot klein! Dit doen we door ons succesvol team van ervaren deskundigen met jarenlange ervaring. Onze ervaring zorgt ervoor dat u erop kan rekenen dat we een kwaliteitsvolle dienst afleveren.</p>
+				</div>
+			</li>
+			<li style="background-image: url(images/index_benelux_kabels_2.png);">
+				<div class="overlay"></div>
+				<div class="container-fluids">
+					<div class="row">
+						<div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
+							<div class="slider-text-inner text-center">
+								<h2>Wij hebben voor elk probleem een oplossing!</h2>
+								<h1>Diverse werken</h1>
+							</div>
+						</div>
 					</div>
 				</div>
+			</li>
+
+		</ul>
+	</div>
+</aside>
+
+<div id="colorlib-intro">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-md-push-4 animate-box colorlib-heading animate-box">
+				<span class="sm">Welkom!</span>
+				<h2><span class="thin">Ons geheim voor</span> <span class="thick">succes</span></h2>
+			</div>
+			<div class="col-md-4 col-md-pull-4 animate-box">
+				<div class="box text-center">
+					<span class="yr">KENNIS</span>
+				</div>
+			</div>
+			<div class="col-md-4 animate-box">
+				<p>BENELUX-KABELS is een heuze familieonderneming. Wij leveren kwalitatief kabelwerken voor elk project
+					van groot tot klein! Dit doen we door ons succesvol team van ervaren deskundigen met jarenlange
+					ervaring. Onze ervaring zorgt ervoor dat u erop kan rekenen dat we een kwaliteitsvolle dienst
+					afleveren.</p>
 			</div>
 		</div>
+	</div>
+</div>
 
-		<div id="colorlib-services" class="colorlib-light-grey">
-			<div class="container">
+<div id="colorlib-services" class="colorlib-light-grey">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 animate-box colorlib-heading animate-box">
+				<span class="sm">Wat kunnen we doen voor u?</span>
+				<h2><span class="thin">Onze</span> <span class="thick">Services</span></h2>
+			</div>
+			<div class="col-md-8">
 				<div class="row">
-					<div class="col-md-4 animate-box colorlib-heading animate-box">
-						<span class="sm">Wat kunnen we doen voor u?</span>
-						<h2><span class="thin">Onze</span> <span class="thick">Services</span></h2>					</div>
-					<div class="col-md-8">
-						<div class="row">
-							<div class="wrap">
-								<div class="col-md-6 animate-box">
-									<div class="services">
-										<span class="icon">
-											<i class="flaticon-skyline"></i>
-										</span>
-										<div class="desc">
-											<h3>Kabelwerken</h3>
-											<p>Elke soort kabel kan getrokken worden door ons; laagspanning, middenspanning, hoogspanning tot duizelwekkende voltages, de kleinste glazvezel kabels tot kabels met een sectie van 2000mm.  Dit kunnen we doen in sleuven, op kabelbanen, kabelracks, in tunnels, kokers of schachten en nog veel meer!</p>
-											</div>
-									</div>
+					<div class="wrap">
+						<div class="col-md-6 animate-box">
+							<div class="services">
+								<span class="icon">
+									<i class="flaticon-skyline"></i>
+								</span>
+								<div class="desc">
+									<h3>Kabelwerken</h3>
+									<p>Elke soort kabel kan getrokken worden door ons; laagspanning, middenspanning,
+										hoogspanning tot duizelwekkende voltages, de kleinste glazvezel kabels tot
+										kabels met een sectie van 2000mm. Dit kunnen we doen in sleuven, op kabelbanen,
+										kabelracks, in tunnels, kokers of schachten en nog veel meer!</p>
 								</div>
-								<div class="col-md-6 animate-box">
-									<div class="services">
-										<span class="icon">
-											<i class="flaticon-crane"></i>
-										</span>
-										<div class="desc">
-											<h3>Diverse werken</h3>
-											<p>Naast het trekken van kabels kunnen wij u ook helpen met allerlei diverse projecten. Wij staan dag en nacht klaar voor het voldoen van de diverse behoeftes van onze klanten. BENELUX-KABELS is de plek voor uw creatieve inbreng bij een project!</p>
-											</div>
-									</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box">
+							<div class="services">
+								<span class="icon">
+									<i class="flaticon-crane"></i>
+								</span>
+								<div class="desc">
+									<h3>Diverse werken</h3>
+									<p>Naast het trekken van kabels kunnen wij u ook helpen met allerlei diverse
+										projecten. Wij staan dag en nacht klaar voor het voldoen van de diverse
+										behoeftes van onze klanten. BENELUX-KABELS is de plek voor uw creatieve inbreng
+										bij een project!</p>
 								</div>
 							</div>
 						</div>
@@ -90,21 +98,24 @@
 				</div>
 			</div>
 		</div>
-		
-		<div id="colorlib-about">
-			<div class="container">
+	</div>
+</div>
+
+<div id="colorlib-about">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-md-push-8 animate-box colorlib-heading animate-box">
+				<span class="sm">Team</span>
+				<h2><span class="thin">ONZE</span> <span class="thick">WERKNEMERS</span></h2>
+				<p>Een sterk bedrijf heeft sterke medewerkers nodig. Dit zijn de mensen die het bedrijf laten draaien.
+				</p>
+			</div>
+			<div class="col-md-8 col-md-pull-4">
 				<div class="row">
-					<div class="col-md-4 col-md-push-8 animate-box colorlib-heading animate-box">
-						<span class="sm">Team</span>
-						<h2><span class="thin">ONZE</span> <span class="thick">WERKNEMERS</span></h2>
-						<p>Een sterk bedrijf heeft sterke medewerkers nodig. Dit zijn de mensen die het bedrijf laten draaien.</p>
-					</div>
-					<div class="col-md-8 col-md-pull-4">
-						<div class="row">
-							<img src="images/team.jpg" alt="logo" style="width: 100%; height: auto;">
-						</div>
-					</div>
+					<img src="images/team.jpg" alt="logo" style="width: 100%; height: auto;">
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
 {% endblock %}
