--- a/old/veiligheid.html
+++ b/old/veiligheid.html
@@ -1,44 +1,51 @@
 {% extends "base.html" %}
 {% block content %}
-		<aside id="colorlib-hero">
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url(images/veiligheid.jpeg);">
-			   		<div class="overlay"></div>
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
-				   				<div class="slider-text-inner text-center">
-				   					<h1>Veiligheid</h1>
-				   				</div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			  	</ul>
-		  	</div>
-		</aside>
-
-		<div class="container">
-			<div id="colorlib-about">
-				<div class="container">
+<aside id="colorlib-hero">
+	<div class="flexslider">
+		<ul class="slides">
+			<li style="background-image: url(images/veiligheid.jpeg);">
+				<div class="overlay"></div>
+				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-4 col-md-push-8 animate-box colorlib-heading animate-box">
-							<span class="sm">VCA*</span>
-							<h2><span class="thin">ONZE</span> <span class="thick">CERTIFICATEN</span></h2>
-							<p>Team BENELUX-KABELS is competent in elk gebied. Met onze certificaten bevestigen we een voortlopend en flexibel leerproces, hierdoor garanderen wij een constante vooruitgang voor onze klanten.
-								<br> <br> Elke werknemer bij BENELUX-KABELS beschikt over een VCA-BASIS en de ploegbazen van een VCA-VOL certificaat. 
-								<br> <br> Naast het beschikken van een VCA certificaat bezitten alle werknemers ook een hoogwerkerscertificaat. Dit is noodzakelijk voor de vele werken die door ons uitgevoerd worden.
-								<br> <br> BENELUX-KABELS is voor allerlei doeleinden verzekerd. Onze onderneming is verzekerd voor schadegevallen tot anderhalf miljoen euro. Wij kunnen hiermee garanderen dat elke fout zichzelf zal rechtzetten. De werknemers bij BENELUX-KABELS worden ook bedekt door een verzekering.
-							</p>
-						</div>
-						<div class="col-md-8 col-md-pull-4">
-							<div class="row">
-								<img src="images/certificaat.jpeg" alt="logo" style="width: 100%; height: auto;">
+						<div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
+							<div class="slider-text-inner text-center">
+								<h1>Veiligheid</h1>
 							</div>
 						</div>
 					</div>
 				</div>
+			</li>
+		</ul>
+	</div>
+</aside>
+
+<div class="container">
+	<div id="colorlib-about">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-push-8 animate-box colorlib-heading animate-box">
+					<span class="sm">VCA*</span>
+					<h2><span class="thin">ONZE</span> <span class="thick">CERTIFICATEN</span></h2>
+					<p>Team BENELUX-KABELS is competent in elk gebied. Met onze certificaten bevestigen we een
+						voortlopend en flexibel leerproces, hierdoor garanderen wij een constante vooruitgang voor onze
+						klanten.
+						<br> <br> Elke werknemer bij BENELUX-KABELS beschikt over een VCA-BASIS en de ploegbazen van een
+						VCA-VOL certificaat.
+						<br> <br> Naast het beschikken van een VCA certificaat bezitten alle werknemers ook een
+						hoogwerkerscertificaat. Dit is noodzakelijk voor de vele werken die door ons uitgevoerd worden.
+						<br> <br> BENELUX-KABELS is voor allerlei doeleinden verzekerd. Onze onderneming is verzekerd
+						voor schadegevallen tot anderhalf miljoen euro. Wij kunnen hiermee garanderen dat elke fout
+						zichzelf zal rechtzetten. De werknemers bij BENELUX-KABELS worden ook bedekt door een
+						verzekering.
+					</p>
+				</div>
+				<div class="col-md-8 col-md-pull-4">
+					<div class="row">
+						<img src="images/certificaat.jpeg" alt="logo" style="width: 100%; height: auto;">
+					</div>
+				</div>
 			</div>
 		</div>
+	</div>
+</div>
 {% endblock %}
