--- a/producten.html
+++ b/producten.html
@@ -124,7 +124,7 @@
 								<li>Durmen 56 <br> 9240 Zele</li>
 								<li><a href="tel://+32484445725"><i class="icon-phone"></i> + 32 484 44 57 25</a></li>
 								<li><a href="mailto:info@benelux-kabels.be"><i class="icon-envelope"></i> info@benelux-kabels.be</a></li>
-								<li><a href="http://benelux-kabels.be"><i class="icon-location4"></i> benelux-kabels.be</a></li>
+								<li><a href="https://benelux-kabels.be"><i class="icon-location4"></i> benelux-kabels.be</a></li>
 							</ul>
 						</div>
 						<div class="col-md-3 col-md-push-1">
